# experiment-routing-spike

./: .gitignore  README.md  pyproject.toml  redis-values.yml
xp_rtr/: app.py  client-cohort-map.yml
xp_rtr/treatments/: default_treatment.py  t1_treatment.py  t2_treatment.py
xp_rtr/utils/: loaders.py  xprtr_cli.py
