[tool.poetry]
name = "xp-rtr"
version = "0.1.0"
description = "Experiment treatment http request router functional implementation"
authors = ["Chris Ottinger <chris.ottinger@gammadata.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
xprtr-cli = "xp_rtr.utils.xprtr_cli:app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
structlog = "^24.1.0"
uvicorn = "^0.27.0.post1"
jinja2 = "^3.1.3"
typer = "^0.9.0"
rich = "^13.7.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
pre-commit = "^3.6.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
